--- a/main.css
+++ b/main.css
@@ -1,8 +1,19 @@
-h1 {
-    color: blue;
-    font-size: 24px;
+h1{
+    background-color: #a334db;
+    color: #fff;
+    padding: 20px;
+    background-color:crimson
 }
-  title{
+
+title{
     color: rgb(255, 255, 255);
     padding: 20px;
   }
+
+  body{
+    background-color: beige;
+    color: #fff;
+    padding: 20px;
+    
+  }
+  
