--- a/main.css
+++ b/main.css
@@ -1,19 +1,18 @@
-h1{
+h1 {
     background-color: #a334db;
     color: #fff;
     padding: 20px;
-    background-color:crimson
+    background-color: crimson;
 }
 
-title{
+title {
     color: rgb(255, 255, 255);
     padding: 20px;
-  }
+}
 
-  body{
+  body {
     background-color: beige;
     color: #fff;
     padding: 20px;
-    
-  }
+}
   
