--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 h1 {
-    background-color: #a334db;
+    background-color: rgb(37, 85, 196);
     color: #fff;
     padding: 20px;
     background-color: crimson;
