--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 h1 {
-    background-color: rgb(37, 85, 196);
+    background-color: #8b635c;
     color: #fff;
     padding: 20px;
     background-color: crimson;
