--- a/main.css
+++ b/main.css
@@ -1,18 +1,18 @@
-h1 {
-    background-color: #8b635c;
+h1{
+    background-color: #a334db;
     color: #fff;
     padding: 20px;
-    background-color: crimson;
+    background-color:crimson
 }
 
-title {
-    color: rgb(255, 255, 255);
+title{
+    color: #8b635c;
     padding: 20px;
-}
+  }
 
-  body {
-    background-color: #8b635c;
+  body{
+    background-color: cea289;
     color: #fff;
     padding: 20px;
-}
+  }
   
