--- a/main.css
+++ b/main.css
@@ -14,5 +14,9 @@ title{
     background-color: cea289;
     color: #fff;
     padding: 20px;
-  }
-  
+      
+  p{color: #8b635c;
+    size: 12px;
+    background-color: aqua;
+   }
+
